<resources>
    <string name="appkey">UGT*Vh4e11@s</string>
    <string name="app_name">Sistema de Bibliotecas</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="dir"><b><i>Dirección: </i></b></string>
    <string name="tel"><b><i>Teléfono: </i></b></string>
    <string name="ho_ate"><b><i>Horario de atención al público </i></b></string>
    <string name="lu_vi"><b><i>Lunes a Viernes: </i></b></string>
    <string name="sab"><b><i>Sábados: </i></b></string>
    <string name="dom"><b><i>Domingos: </i></b></string>
    <string name="d_fest"><b><i>Los días festivos no hay servicio.</i></b></string>
    <string name="llevame">Llévame</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="identi">Identificación</string>
    <string name="login">Entrar</string>
    <string name="errorVacio">Este campo no puede estár vacío</string>
    <string name="conecction">Necesaria conexión a Internet</string>
    <string name="multaNula">Felicidades, no tienes multas, sigue así</string>
    <string name="hisPres">Mi historial de prestamos</string>
    <string name="reservas">Mis reservas</string>
    <string name="certi">Mis Certificados</string>
    <string name="ini">Catálogo</string>
    <string name="map">Listado de Bibliotecas</string>
    <string name="apli">Aplicaciones</string>
    <string name="pagBasesdeDatos">http://aplicacionesbiblioteca.udea.edu.co/bdm.html</string>
    <string name="pagBibliotecaDigital">http://bibliotecadigital.udea.edu.co/</string>
    <string name="pagInduccionVirtual">https://aplicacionesbiblioteca.udea.edu.co/induccionvirtual/</string>
    <string name="pagMaterialBiblio">http://cirene.udea.edu.co/seleccion/#/inicioPortal</string>
    <string name="pagTurnos">http://biblioteca.udea.edu.co/turnos/#/</string>
    <string name="pagSuministros">http://cirene.udea.edu.co/suministros/#/registrarsolicitudPortal</string>
    <string name="help_1">Ayudas y sugerencias</string>
    <string name="miCuenta">Mi cuenta</string>
    <string name="chat">Chat</string>
    <string name="textTiCGD">Biblioteca Carlos Gaviria Díaz Universidad de Antioquia</string>
    <string name="LatCGD">6.266968266636446</string>
    <string name="LonCGD">-75.5691146850586</string>
    <string name="TitleCGD">Carlos Gavíria Díaz</string>
    <string name="TextoCGD">Esta Biblioteca contiene colecciones y servicios especializados en todas las áreas del conocimiento. En la Biblioteca Carlos Gaviria Díaz se concentran y coordinan todas las actividades administrativas del Sistema de Bibliotecas y está ubicada en la ciudadela universitaria (Bloque 8) desde 1968. El edificio consta de 5 pisos en los cuales se encuentran diversas colecciones y servicios, que están a disposición de la comunidad académica y los visitantes.</string>
    <string name="dirCGD">Calle 67 # 53 - 108 - Bloque 8 (Ciudad Universitaria, Medellín)</string>
    <string name="telCGD"> +57(4) 2195151 || +57(4) 2195140</string>
    <string name="lvCGD">De 7:00 a.m. a 8:45 p.m.</string>
    <string name="sabCGD">De 8:00 a. m. a 3:45 p.m.</string>
    <string name="domCGD">De 9:00 a. m. a 12:45 p.m.</string>
    <string name="textTiMedica">Biblioteca Médica Universidad de Antioquia</string>
    <string name="LatMedica">6.262771560933662</string>
    <string name="LonMedica">-75.56567365449155</string>
    <string name="TitleMedica">Médica</string>
    <string name="TextoMedica">Esta Biblioteca contiene colecciones y servicios especializados en las áreas de la salud y la medicina, con enfoque clínico.</string>
    <string name="dirMedica">Calle 51D # 62 - 29, piso 4 Medellín | Colombia</string>
    <string name="telMedica"> +57(4) 2196910 || +57(4) 2196912 || +57(4) 2196914</string>
    <string name="lvMedica">De 7:00 a.m. a 7:00 p.m.</string>
    <string name="sabMedica">De 8:00 a. m. a 1:00 p.m.</string>
    <string name="domMedica">no hay servicio.</string>
    <string name="textTiSaP">Biblioteca de Salud Pública Universidad de Antioquia</string>
    <string name="LatSaP">6.260979870306369</string>
    <string name="LonSaP">-75.56756192832836</string>
    <string name="TitleSaP">Salud Pública</string>
    <string name="TextoSaP">En esta Biblioteca se encuentra la Colección de Seguridad Social.</string>
    <string name="dirSaP">Calle 62 # 52 - 59 - Piso 1 - 113 Medellín | Colombia</string>
    <string name="telSaP">+57(4) 2196870</string>
    <string name="lvSaP">De 7:00 a.m. a 6:00 p.m.</string>
    <string name="sabSap">De 8:00 a. m. a 1:00 p.m.</string>
    <string name="domSaP">no hay servicio.</string>
    <string name="textTiOdo">Biblioteca de Odontología Universidad de Antioquia</string>
    <string name="LatOdo">6.261875716388482</string>
    <string name="LonOdo">-75.56747609894956</string>
    <string name="TitleOdo">Odontología</string>
    <string name="TextoOdo">Esta Biblioteca contiene colecciones y servicios especializados en las áreas de la salud oral general y especializada.</string>
    <string name="dirOdo">Calle 64 # 52 - 59 - Piso 2 Medellín | Colombia</string>
    <string name="telOdo">+57(4) 2196750</string>
    <string name="lvOdo"> De 6:00 a.m. a 6:00 p.m.</string>
    <string name="sabOdo">no hay servicio.</string>
    <string name="domOdo">no hay servicio.</string>
    <string name="textTiEn">Biblioteca de Enfermería Universidad de Antioquia</string>
    <string name="LatEn">6.261918374385541</string>
    <string name="LonEn">-75.56790525108227</string>
    <string name="TitleEn">Enfermería</string>
    <string name="TextoEn">Esta Biblioteca contiene colecciones y servicios especializados en las áreas del cuidado de la salud del paciente y de sí mismo.</string>
    <string name="dirEn">Calle 64 # 53 - 09 Medellín | Colombia</string>
    <string name="telEn">+57(4) 2196341</string>
    <string name="lvEn"> De 7:00 a.m. a 6:00 p.m.</string>
    <string name="sabEn"> De 8:00 a.m. a 1:00 p.m.</string>
    <string name="domEn">no hay servicio.</string>
    <string name="textTiRo">Biblioteca de Ciudadela Universitaria Robledo Universidad de Antioquia</string>
    <string name="LatRo">6.272449904481402</string>
    <string name="LonRo">-75.58769702911377</string>
    <string name="TitleRo">Ciudadela Universitaria Robledo</string>
    <string name="TextoRo">Esta Biblioteca contiene colecciones y servicios especializados en medicina veterinaria, producción animal, zootecnia, nutrición y dietética, educación física, deporte y entrenamiento deportivo. Las Colecciones especializadas de educación física, deporte y entrenamiento deportivo están ubicadas en el Bloque 45 - 108 de esta misma sede. Y su horario de servicio es de lunes a viernes, de 6:00 a.m. a 7:00 p.m.</string>
    <string name="dirRo">Carrera 75 # 65 - 87 - Bloque 46 -100 Medellín | Colombia</string>
    <string name="telRo">+57(4) 2199151 || +57(4) 2199152</string>
    <string name="lvRo">De 7:00 a.m. a 7:00 p.m.</string>
    <string name="sabRo"> De 8:00 a.m. a 2:00 p.m.</string>
    <string name="domRo">no hay servicio.</string>
    <string name="textTiBBT">Biblioteca de Bibliotecología Universidad de Antioquia</string>
    <string name="LatBBT">6.266968266636446</string>
    <string name="LonBBT">-75.5691146850586</string>
    <string name="TitleBBT">Bibliotecología</string>
    <string name="TextoBBT">Esta Biblioteca contiene colecciones y servicios especializados en áreas de las ciencias de la información.</string>
    <string name="dirBBT">Calle 67 # 53 -108 - Bloque 12 - Piso 3 Medellín | Colombia</string>
    <string name="telBBT">+57(4) 2195940 || +57(4) 2195959 || +57(4) 2195941</string>
    <string name="lvBBT">De 7:00 a.m. a 7:00 p.m.</string>
    <string name="sabBBT"> De 8:00 a.m. a 2:00 p.m.</string>
    <string name="domBBT">no hay servicio.</string>
    <string name="textTiBN">Biblioteca del Bachillerato Nocturno Universidad de Antioquia</string>
    <string name="LatBN">6.245459686324733</string>
    <string name="LonBN">-75.56318846591694</string>
    <string name="TitleBN">Bachillerato Nocturno</string>
    <string name="TextoBN">Esta Biblioteca contiene colecciones y servicios especializados en programas académicos de Bachillerato.</string>
    <string name="dirBN">Cr. 42A # 48 - 23 Medellín | Colombia</string>
    <string name="telBN">+57(4) 2399654</string>
    <string name="lvBN">Lunes de 3:00 a 9:00 p.m.
                        Martes de 8:00 a.m a 1:00 p.m. y 3:00 a 9:00 p.m.
                        Miércoles de 10:00 a.m. a 1:00 p.m. y 3:00 a 9:00 p.m
                        Jueves de 8:00 a 12:00 m. y de 3:00 a 9:00 p.m.
                        Viernes de 3:00 a 9:00 p.m.</string>
    <string name="sabBN"> De 2:00 p.m. a 6:00 p.m.</string>
    <string name="domBN">no hay servicio.</string>
    <string name="textTiCEN">CENDOI | Centro de Documentación de Ingeniería Universidad de Antioquia</string>
    <string name="LatCEN">6.2683952044019025</string>
    <string name="LonCEN">-75.56804716587067</string>
    <string name="TitleCEN">CENDOI</string>
    <string name="TextoCEN">Los Centros de Documentación son Unidades de Información que desarrollan colecciones y servicios con énfasis especializados.</string>
    <string name="dirCEN">Calle 67 # 53 - 108 bloque 20, oficina 146 Medellín | Colombia</string>
    <string name="telCEN">+57(4) 2195527</string>
    <string name="lvCEN">De 6:00 a.m. a 6:45 p.m.</string>
    <string name="sabCEN">De 9:00 a.m. a 6:00 p.m.</string>
    <string name="domCEN">no hay servicio.</string>
    <string name="textTiArt">Centro de Documentación de Artes Universidad de Antioquia</string>
    <string name="LatArt">6.266954935734895</string>
    <string name="LonArt">-75.56911200284958</string>
    <string name="TitleArt">Artes</string>
    <string name="TextoArt">Los Centros de Documentación son Unidades de Información que desarrollan colecciones y servicios con énfasis especializados.</string>
    <string name="dirArt">Calle 67 # 53 - 108 bloque 25, oficina 105 Medellín | Colombia</string>
    <string name="telArt">+57(4) 2195885</string>
    <string name="lvArt"> De 8:00 a.m. a 5:45 p.m.</string>
    <string name="sabArt">no hay servicio.</string>
    <string name="domArt">no hay servicio.</string>
    <string name="textTiEco">Centro de Documentación de Economía Universidad de Antioquia</string>
    <string name="LatEco">6.266954935734895</string>
    <string name="LonEco">-75.56911200284958</string>
    <string name="TitleEco">Economía</string>
    <string name="TextoEco">Los Centros de Documentación son Unidades de Información que desarrollan colecciones y servicios con énfasis especializados.</string>
    <string name="dirEco">Calle 67 # 53 - 108 bloque 13, oficina 118 Medellín | Colombia</string>
    <string name="telEco">+57(4) 2195845</string>
    <string name="lvEco">De 7:30 a.m. a 6:30 p.m.</string>
    <string name="sabEco">no hay servicio.</string>
    <string name="domEco">no hay servicio.</string>
    <string name="textTiEdu">Centro de Documentación de Educación Universidad de Antioquia</string>
    <string name="LatEdu">6.266954935734895</string>
    <string name="LonEdu">-75.56911200284958</string>
    <string name="TitleEdu">Educación</string>
    <string name="TextoEdu">Los Centros de Documentación son Unidades de Información que desarrollan colecciones y servicios con énfasis especializados.</string>
    <string name="dirEdu">Calle 67 # 53 - 108 bloque 13, oficina 118 Medellín | Colombia</string>
    <string name="telEdu">+57(4) 2195707</string>
    <string name="lvEdu">Lunes y jueves de 8:00 a.m. – 6:00 pm.
                        Martes, miércoles y viernes de 8:00 a.m. -11:45 a.m. y 2:00 p.m. - 5:45 p.m.</string>
    <string name="sabEdu">no hay servicio.</string>
    <string name="SignatureHistorial">Signatura: </string>
    <string name="fec_entr">Fecha de devolución: </string>
    <string name="multaHistorial">Multa: </string>
</resources>