<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center">
        <ImageView
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageHistori"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleHistori"
                android:textColor="@android:color/black"/>



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/localizacionHistori"
                android:textColor="@android:color/black"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SignatureHistorial"
                android:textColor="@color/udeaLight"
                android:textStyle="bold|italic"
                android:id="@+id/SignatureText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SignatureHistori"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/SignatureText"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fec_entr"
                android:textColor="@color/udeaLight"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/devolucionHistori"
                android:textColor="@android:color/black"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multaHistorial"
                android:textColor="@color/udeaLight"
                android:textStyle="bold|italic"
                android:id="@+id/tituloMultaHistori"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multaHistori"
                android:textColor="@android:color/black"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>